Avoid floating footer or a footer that overlaps most of the sidebar. The sidebar now scrolls together with the content.

--- a/webpack/stylesheets/generic.scss
+++ b/webpack/stylesheets/generic.scss
@@ -44,6 +44,10 @@ body {
   color: $body-color;
 }
 
+.wrapper {
+  display: flex;
+}
+
 a, a:visited {
   text-decoration: none;
   color: $link-color;
