--- a/webpack/stylesheets/toc.scss
+++ b/webpack/stylesheets/toc.scss
@@ -124,7 +124,7 @@
   .main.class.has-toc {
     width: 64vw;
     max-width: 64vw;
-    margin: auto 13%;
+    margin: 0;
   }
 
   .doc-nav {
